--- a/webstatis-Annisa Putri N/stylebelajartugas4.css
+++ b/webstatis-Annisa Putri N/stylebelajartugas4.css
@@ -3,7 +3,7 @@ margin:0;
 padding:0;
 }
 
-img {img {width: 75%; height: auto;image-resolution: 100%; margin-left: 210px;
+img {width: 75%; height: auto;image-resolution: 100%; margin-left: 210px;
      }
      
 body {
